# docs

./: .gitmodules  CONTRIBUTING.md  README.md  SECURITY.md
CHANGELOG/: CHANGELOG-0.1.md  (+1 more)
development-guide/design-engine-plugin/rest-api-stub/: .gitignore  pyproject.toml
development-guide/design-engine-plugin/rest-api-stub/src/: main.py  settings.py
development-guide/design-engine-plugin/rest-api-stub/src/data/: migration_procedures.json  nodes.json  policies.json  resources.json
development-guide/hardware-plugin/rest-api-stub/: main.py  pyproject.toml
development-guide/hardware-plugin/rest-api-stub/data/agent/: info__deviceType=CPU.json  info__deviceType=memory.json  info__device_type=networkInterface__macaddress=00%3A00%3A00%3A00%3A00%3A00.json  info__device_type=storage__disk_id=0.json
development-guide/hardware-plugin/rest-api-stub/data/fm-sample/: portinfo.json  portinfo__target=e4021cb4-79d9-438a-a8e9-60939fe01deb.json  switchinfo.json
development-guide/hardware-plugin/rest-api-stub/data/hw-control/: secrets_cdim-hw-control-agent_Keycloak.json  token.json
development-guide/hardware-plugin/rest-api-stub/data/oob-sample/: Chassis_Chassis-1.json  Chassis_Chassis-1_Drives.json  Chassis_Chassis-1_Drives_DRI-2001.json  Chassis_Chassis-1_Drives_DRI-2001_EnvironmentMetrics.json  Chassis_Chassis-1_Drives_DRI-2002.json  Chassis_Chassis-1_Drives_DRI-2002_EnvironmentMetrics.json  Chassis_Chassis-1_Drives_DRI-2003.json  Chassis_Chassis-1_Drives_DRI-2003_EnvironmentMetrics.json  Chassis_Chassis-1_Memory.json  Chassis_Chassis-1_Memory_MEM-1001.json  Chassis_Chassis-1_Memory_MEM-1001_EnvironmentMetrics.json  Chassis_Chassis-1_Memory_MEM-1001_MemoryMetrics.json  Chassis_Chassis-1_Memory_MEM-1002.json  Chassis_Chassis-1_Memory_MEM-1002_EnvironmentMetrics.json  Chassis_Chassis-1_Memory_MEM-1002_MemoryMetrics.json  Chassis_Chassis-1_Memory_MEM-1003.json  Chassis_Chassis-1_Memory_MEM-1003_EnvironmentMetrics.json  Chassis_Chassis-1_Memory_MEM-1003_MemoryMetrics.json  Chassis_Chassis-1_NetworkAdapters.json  Chassis_Chassis-1_NetworkAdapters_NIC-3001.json  Chassis_Chassis-1_NetworkAdapters_NIC-3001_EnvironmentMetrics.json  Chassis_Chassis-1_NetworkAdapters_NIC-3001_Metrics.json  Chassis_Chassis-1_NetworkAdapters_NIC-3001_NetworkDeviceFunctions.json  Chassis_Chassis-1_NetworkAdapters_NIC-3001_NetworkDeviceFunctions_NICF-3001.json  Chassis_Chassis-1_NetworkAdapters_NIC-3001_NetworkDeviceFunctions_NICF-3001_Metrics.json  (+111 more)
(+130 files in other folders)
