[project]
name = "rest-api-stub"
version = "0.9.0"
description = "REST API stub"
authors = [{ name = "NEC Corporation" }]
dependencies = ["fastapi[standard]>=0.115.5"]
requires-python = ">=3.12"

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pylint>=3.3.1",
]

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pdm.scripts]
start = "fastapi run --host 0.0.0.0 --port 8001"
start-dev = "fastapi dev --host 0.0.0.0 --port 8001"
