[project]
name = "rest-api-stub"
version = "0.9.0"
description = "REST API stub"
authors = [{ name = "NEC Corporation" }]
dependencies = ["fastapi[standard]>=0.116.1"]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
]

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "fastapi run --host 0.0.0.0 --port 8001"
start-dev = "fastapi dev --host 0.0.0.0 --port 8001"
